start native implementation of compiled conf space and conf energy calculator
got coords assignment working for now, it's a start